--- a/src/scss/blocks/_check.scss
+++ b/src/scss/blocks/_check.scss
@@ -1,18 +1,20 @@
 .check {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     font-weight: 600;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 12px;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 34px;
     color: #848EAD;
+    margin-right: 10px;
 
     .discount {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        margin-left: 9px;
         border-radius: 9.5px;
         background-color: #FEEDE8;
         font-size: 10px;
@@ -28,6 +30,7 @@
     }
 
     .checkbox {
+        margin-left: 60px;
         transition: all 1s ease;
         position: relative;
         &:before {
@@ -39,11 +42,11 @@
             position: absolute;
             transition: all .3s ease;
             left: -50px;
-            top: -3px;
+            top: -4px;
             width: 43px;
             height: 22px;
         }
-        &::after {
+        &:after {
             cursor: pointer;
             content: '';
             width: 14px;
@@ -51,9 +54,10 @@
             display: block;
             border-radius: 50%;
             position: absolute;
-            top: 1px;
+            top: 0;
             left: -45px;
             background: #FFFFFF;
+            
         }
         &_active {
             &:before {
