--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -17,7 +17,7 @@
         align-items: center;
         font-weight: 800;
         font-size: 14px;
-        line-height: 19px;
+        line-height: 14px;
         text-align: center;
         letter-spacing: 2px;
         text-transform: uppercase;
@@ -39,12 +39,50 @@
             margin-right: 8px;
             font-weight: 800;
             font-size: 40px;
-            line-height: 55px;
+            line-height: 40px;
             text-align: right;
             letter-spacing: -1px;
             color: $main_color;
         }
     }
 
-   
+   hr {
+    // position: absolute;
+    // left: 0;
+    margin-bottom: 0;
+    margin-top: 40px;
+    width: 100%;
+    background-color: #ECF0FB;
+   }
+   &__footer {
+       display: flex;
+       align-items: center;
+       justify-content: space-between;
+       margin-top: 32px;
+       ul{
+           margin: 0;
+           li{
+            list-style: none;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 12px;
+            color: #848EAD;
+            margin-bottom: 11px;
+            &:nth-last-child(1) {
+                margin-bottom: 0;
+            }
+            &:before {
+                content: '';
+                display: block;
+                width: 8px;
+                height: 8px;
+                background: url(../icons/check.png) center center / cover no-repeat;
+                position: relative;
+                top: 11px;
+                left: -24px;
+            }
+           }
+       }
+   }
+
 }
