--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -1,9 +1,10 @@
 .slider {
     position: relative;
     width: 100%;
+    margin-top: 40px;
     input[type=range] {
         position: relative;
-        margin-top: 40px;
+        
         width: 100%;
         appearance: none;
         outline: none;
@@ -19,7 +20,7 @@
             width: 40px;
             height: 40px;
             box-shadow: 0px 15px 30px rgba(0, 255, 231, 0.6);
-
+            transition: all .3s;
 
             &:hover {
                 background-color: #24AEA1;
