--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,5 +19,7 @@
 @import 'blocks/triangle';
 @import 'blocks/slider';
 @import 'blocks/check';
+@import 'blocks/button';
+@import 'blocks/modal';
 
 @import 'base/media';
