--- a/src/scss/base/_animation.scss
+++ b/src/scss/base/_animation.scss
@@ -7,3 +7,12 @@
         left: -45px;
     }
 }
+
+@keyframes checkoff {
+    50% {
+        left: -25px;
+    }
+    100% {
+        left: -45px;
+    }
+}
