--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -14,7 +14,8 @@
 
         &::-webkit-slider-thumb {
             appearance: none;
-            background-color: #10D8C4;
+            background: #10D8C4 url(../icons/triangles.png) center center no-repeat;
+            // background-image: url(../icons/triangles.png) center center;
             border-radius: 50%;
             cursor: pointer;
             width: 40px;
@@ -23,6 +24,10 @@
             transition: all .3s;
 
             &:hover {
+                background-color: #7AEADF;
+            }
+
+            &:active {
                 background-color: #24AEA1;
             }
         }
