--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -14,7 +14,7 @@
         position: relative;
         background-color: #fff;
         width: 350px;
-        height: 200px;
+        min-height: 200px;
         border-radius: 8px;
         top: 50%;
         left: 50%;
