--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -3,7 +3,7 @@
     z-index: 1;
     background-color: #fff;
     width: 540px;
-    height: 397px;
+    min-height: 397px;
     box-shadow: 0px 20px 30px -5px rgba(127, 137, 185, 0.152073);
     border-radius: 8px;
     margin-top: 92px;
@@ -15,6 +15,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         font-weight: 800;
         font-size: 14px;
         line-height: 14px;
@@ -60,6 +61,7 @@
        justify-content: space-between;
        margin-top: 32px;
        ul{
+           
            margin: 0;
            li{
             list-style: none;
@@ -74,8 +76,8 @@
             &:before {
                 content: '';
                 display: block;
-                width: 8px;
-                height: 8px;
+                width: 10px;
+                height: 10px;
                 background: url(../icons/check.png) center center / cover no-repeat;
                 position: relative;
                 top: 11px;
