--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -11,15 +11,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         position: relative;
         background-color: #fff;
         width: 350px;
-        min-height: 200px;
+        min-height: 175px;
         border-radius: 8px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        padding: 20px 48px 20px 48px;
     }
     &__text {
         margin-top: 15px;
