--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -27,4 +27,26 @@
         }
     }
 
+    //стилизация ползунка для mozilla
+    &::-moz-range-thumb {
+        outline: none;
+        appearance: none;
+        border: none;
+        background: #10D8C4 url(../icons/triangles.png) center center no-repeat;
+        border-radius: 50%;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        box-shadow: 0px 15px 30px rgba(0, 255, 231, 0.6);
+        transition: all .3s;
+
+        &:hover {
+            background-color: #7AEADF;
+        }
+
+        &:active {
+            background-color: #24AEA1;
+        }
+    }
+
 }
