--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -9,7 +9,7 @@
     background: linear-gradient(90deg, rgb(164, 243, 235) 0%, rgb(236, 240, 251) 0%);
     &::-webkit-slider-thumb {
         outline: none;
-        appearance: none;
+        -webkit-appearance: none;
         background: #10D8C4 url(../icons/triangles.png) center center no-repeat;
         border-radius: 50%;
         cursor: pointer;
@@ -30,7 +30,7 @@
     //стилизация ползунка для mozilla
     &::-moz-range-thumb {
         outline: none;
-        appearance: none;
+        -webkit-appearance: none;
         border: none;
         background: #10D8C4 url(../icons/triangles.png) center center no-repeat;
         border-radius: 50%;
